<?xml version="1.0"?>
<package format="3">
  <name>kf_gins_ros2</name>
  <version>0.1.3</version>
  <description>ROS2 Foxy wrapper to visualize KF-GINS results with TF/Odometry/Path. Adds path decimation and max buffer to avoid RViz crashes.</description>
  <maintainer email="you@example.com">KF-GINS ROS2</maintainer>
  <license>GPL-3.0-or-later</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
